--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Hello, I'm [Your Name]</h1>
-            <p>Aspiring [Your Profession]</p>
+            <h1>Hello, I'm bhavya</h1>
+            <p>Aspiring sde</p>
         </div>
     </header>
 
