--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Hello, I'm [Your Name]</h1>
+            <h1>Hello, I'm Manas</h1>
             <p>Aspiring [Your Profession]</p>
         </div>
     </header>
